Made dark mode a little darker

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -32,23 +32,26 @@ $gray-dark-level-4: #444444;
 $gray-dark-level-5: #3a3a3a;
 $gray-dark-level-6: #363636;
 $gray-dark-level-7: #333333;
-$gray-dark-level-8: #303030;
+$gray-dark-level-8: #2e2e2e;
 $gray-dark-level-9: #292929;
 $gray-dark-level-10: #272727;
-$gray-dark-level-11: #232323;
-$gray-dark-level-12: #1d1d1d;
-$gray-dark-level-13: #181818;
+$gray-dark-level-11: #252525;
+$gray-dark-level-12: #232323;
+$gray-dark-level-13: #1d1d1d;
+$gray-dark-level-14: #181818;
 // Tinted grays
-$tinted-gray-light-level-1: #c7d1db;
-$tinted-gray-light-level-2: #c1cad4;
-$tinted-gray-light-level-3: #bfc8d1;
-$tinted-gray-light-level-4: #b7c1ca;
-$tinted-gray-light-level-5: #b2bbc4;
-$tinted-gray-light-level-6: #a9b3bb;
-$tinted-gray-light-level-7: #9ca5ac;
-$tinted-gray-light-level-8: #8f989e;
-$tinted-gray-light-level-9: #868e94;
-$tinted-gray-light-level-10: #80878d;
+$tinted-gray-light-level-1: #d6e1ec;
+$tinted-gray-light-level-2: #ced9e4;
+$tinted-gray-light-level-3: #c7d1db;
+$tinted-gray-light-level-4: #c1cad4;
+$tinted-gray-light-level-5: #bfc8d1;
+$tinted-gray-light-level-6: #b7c1ca;
+$tinted-gray-light-level-7: #b2bbc4;
+$tinted-gray-light-level-8: #a9b3bb;
+$tinted-gray-light-level-9: #9ca5ac;
+$tinted-gray-light-level-30: #8f989e;
+$tinted-gray-light-level-31: #868e94;
+$tinted-gray-light-level-32: #80878d;
 // Basic blues
 $basic-blue-level-1: #0000ff;
 // Baby blues
@@ -146,11 +149,11 @@ $basic-yellow-level-2: #e2e200;
 
 // Light/Dark mode (general)
 $mode-base-background-color-light: white;
-$mode-base-background-color-dark: $gray-dark-level-7;
+$mode-base-background-color-dark: $gray-dark-level-8;
 $mode-base-primary-text-color-light: black;
 $mode-base-primary-text-color-dark: $tinted-gray-light-level-1;
 $mode-base-secondary-text-color-light: $gray-dark-level-10;
-$mode-base-secondary-text-color-dark: $tinted-gray-light-level-6;
+$mode-base-secondary-text-color-dark: $tinted-gray-light-level-4;
 $mode-backend-errors-text-color-light: $basic-red-level-1;
 $mode-backend-errors-text-color-dark: $fiery-red-level-1;
 $mode-char-count-limit-reached-text-color-light: $mode-backend-errors-text-color-light;
@@ -193,7 +196,7 @@ $mode-universal-text-grayed-out-text-color-dark: $gray-level-6;
 $mode-base-form-input-border-color-light: $gray-level-5;
 $mode-base-form-input-border-color-dark: black;
 $mode-base-form-input-background-color-light: $gray-light-level-5;
-$mode-base-form-input-background-color-dark: $gray-dark-level-1;
+$mode-base-form-input-background-color-dark: $gray-dark-level-2;
 // Light/Dark mode (specific)
 $mode-navbar-hamburger-dropdown-background-color-light: $mode-base-background-color-light;
 $mode-navbar-hamburger-dropdown-background-color-dark: $mode-base-background-color-dark;
@@ -228,7 +231,7 @@ $mode-account-modal-change-settings-category-container-border-color-dark: $gray-
 $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
 $mode-top-bar-background-color-light: $gray-light-level-5;
-$mode-top-bar-background-color-dark: $gray-dark-level-10;
+$mode-top-bar-background-color-dark: $gray-dark-level-12;
 $mode-top-bar-button-border-color-light: $mode-base-primary-text-color-light;
 $mode-top-bar-button-border-color-dark: $gray-level-1;
 $mode-top-bar-button-background-color-light: $mode-base-background-color-light;
@@ -252,9 +255,9 @@ $mode-top-bar-search-bar-text-color-dark: $mode-base-primary-text-color-dark;
 $mode-list-row-border-color-light: $gray-level-2;
 $mode-list-row-border-color-dark: $gray-level-6;
 $mode-list-row-hover-background-color-light: $gray-light-level-2;
-$mode-list-row-hover-background-color-dark: $gray-dark-level-5;
+$mode-list-row-hover-background-color-dark: $gray-dark-level-6;
 $mode-list-row-selected-background-color-light: $gray-light-level-6;
-$mode-list-row-selected-background-color-dark: $gray-dark-level-3;
+$mode-list-row-selected-background-color-dark: $gray-dark-level-4;
 $mode-list-header-box-shadow-light: 0 1px 0 $mode-list-row-border-color-light;
 $mode-list-header-box-shadow-dark: 0 1px 0 $mode-list-row-border-color-dark;
 $mode-list-header-background-color-light: $mode-base-background-color-light;
@@ -288,7 +291,7 @@ $mode-item-view-list-sidebar-expand-minimize-button-border-color-dark: $mode-ite
 $mode-item-view-list-sidebar-expand-minimize-button-background-color-light: $mode-item-view-item-box-background-color-light;
 $mode-item-view-list-sidebar-expand-minimize-button-background-color-dark: $mode-item-view-item-box-background-color-dark;
 $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-light: $gray-light-level-8;
-$mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark: $gray-dark-level-11;
+$mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark: $gray-dark-level-12;
 $mode-item-view-form-input-border-color-light: black;
 $mode-item-view-form-input-border-color-dark: black;
 $mode-item-view-form-input-background-color-light: $mode-base-background-color-light;
